# pktgate-dpdk

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  NEXT_SESSION_PROMPT.md  README.md  design.md  implementation-plan-errata.md  implementation-plan.md  input.md  review-notes.md  review-v2.md  test-plan.md
.github/workflows/: ci.yml
cmake/: Fuzz.cmake  Gtest.cmake  Sanitizers.cmake  Warnings.cmake
docs/: configuration.md  install.md  limitations.md  observability.md  operations.md  quickstart.md  troubleshooting.md
fuzz/: CMakeLists.txt  compiler_fuzz.cc  parser_fuzz.cc  smoke_fuzz.cc  validator_fuzz.cc
fuzz/seeds/compiler/: collision_l2.json  fib_stress.json  mac_group_max.json  mixed_layers.json  overlap_l4.json
fuzz/seeds/parser/: all_sections.json  big_number.json  deep_nest.json  default_drop.json  huge_list.json  minimal.json  nul_bytes.json  trailing_comma.json  unicode.json
fuzz/seeds/validator/: cycle_group.json  forward_ref.json  hostile_expansion.json  max_rules.json  port_range_abuse.json  version_skew.json  vlan_oob.json  vrf_oob.json
scratch/c8-salvage/: README.md  bump_counter_pattern.md  nm_unmanaged_tap.md  populate_ruleset_eal_recipe.md  stats_on_exit_schema.md  test_f2_l2.py.ref
scripts/: check-counter-consistency.sh  check-ctest-labels.sh  dev_hugepages.sh  run_all.sh
scripts/git-hooks/: pre-commit
src/: main.cpp
src/action/: action.h
src/compiler/: compiler.cpp  compiler.h  mirror_strategy.cpp  mirror_strategy.h  object_compiler.cpp  object_compiler.h  rule_compiler.cpp  rule_compiler.h
src/config/: addr.cpp  addr.h  model.h  parser.cpp  parser.h  sizing.cpp  sizing.h  validator.cpp  validator.h
src/ctl/: bootstrap.cpp  bootstrap.h  cmd_socket.cpp  cmd_socket.h  port_resolver.cpp  port_resolver.h  reload.cpp  reload.h  telemetry_reload.cpp  telemetry_reload.h
src/ctl/inotify/: CMakeLists.txt  debounce.cpp  debounce.h  event_filter.h  watcher.cpp  watcher.h
src/dataplane/: action_dispatch.h  classify_entry.h  classify_l2.h  classify_l3.h  classify_l4.h  lcore_counter.h  worker.cpp  worker.h
src/eal/: dynfield.cpp  dynfield.h  port_init.cpp  port_init.h
src/rl_arena/: arena.cpp  arena.h  rl_arena.cpp  rl_arena.h
src/ruleset/: builder.cpp  builder.h  builder_eal.cpp  builder_eal.h  ruleset.cpp  ruleset.h  types.h
src/runtime/: arena_gc.cpp  arena_gc.h
src/telemetry/: CMakeLists.txt  counter_names.h  http_server.cpp  http_server.h  prom_encoder.cpp  prom_encoder.h  snapshot.cpp  snapshot.h  snapshot_publisher.cpp  snapshot_publisher.h  snapshot_ring.h
systemd/: pktgate-devvm.service
test-plan-drafts/: chaos.md  corner.md  functional.md  harness.md  perf.md  unit.md
tests/: CMakeLists.txt  lsan.supp  tsan.supp
tests/chaos/: CMakeLists.txt  conftest.py  test_m16_mirror_mempool_exhaust.py  test_m16_mirror_port_gone.py  test_m16_mirror_slow_consumer.py  test_x1_reload_storm.py
tests/functional/: CMakeLists.txt  conftest.py  test_boot.py  test_d28_tx_symmetry.py  test_d39_scatter.py  test_f14_main_resolver.py  test_f14_tap_exit.py  test_f15_vhost_boot.py  test_f16_mirror_tap.py  test_f16_mirror_tap_nonlex.py  test_f2_l2.py  test_f2_l4.py  test_f3_action.py  test_f3_ratelimit.py  test_f4_l3.py  test_f5_reload.py  test_f7_inotify.py  test_f8_metrics.py  test_f8_qinq_counter.py
tests/integration/: CMakeLists.txt  conftest.py  test_c7_27_counter_invariant.cpp  test_m15_vhost_pair.py  test_m15_vhost_peer_crash.py  test_reload.cpp  test_rl_compile_build.cpp  test_rl_integration.cpp
tests/placeholders/: CMakeLists.txt
tests/smoke/: CMakeLists.txt  test_build.cpp  test_ci_workflow_sanity.cpp  test_counter_consistency.cpp  test_fuzz_sanity.cpp  test_presets.cpp
tests/unit/: CMakeLists.txt  eal_fixture.h  test_addr.cpp  test_budget_corners.cpp  test_builder.cpp  test_compiler.cpp  test_d41_eal_smoke.cpp  test_d41_guard.cpp  test_eal_unit.cpp  test_http_server.cpp  test_inotify_debounce.cpp  test_inotify_event_filter.cpp  test_inotify_watcher_lifecycle.cpp  test_object_compiler_mirror.cpp  test_parser.cpp  test_port_resolver.cpp  test_port_resolver_vhost.cpp  test_prom_encoder.cpp  test_rl_arena.cpp  test_rl_arena_gc.cpp  test_rl_arena_slot.cpp  test_rl_arena_tsan.cpp  test_role_idx_port_id_translation.cpp  test_snapshot_publisher.cpp  test_snapshot_ring.cpp  test_snapshot_sum.cpp  test_validator.cpp
